// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de incrementar el contador 1`] = `
<h1
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +
  </button>
</h1>
`;

exports[`ProductCard debe mostrar el componente correctamente 1`] = `
<h1
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</h1>
`;
